--- a/client/assets/templates/event-list.html
+++ b/client/assets/templates/event-list.html
@@ -2,15 +2,13 @@
  
 <div layout="column">
  
-  <md-toolbar flex md-scroll-shrink ng-if="true">
+  <md-toolbar flex md-scroll-shrink ng-if="true" class="fixed-footer">
     <div class="md-toolbar-tools" layout="row">
-
-       <div flex="25">
         <md-menu>
-          <md-button aria-label="what" ng-click="ctrl.openMenu($mdOpenMenu, $event)">
+          <md-button flex="25" aria-label="what" ng-click="ctrl.openMenu($mdOpenMenu, $event)" >
             What?
           </md-button>
-          <md-menu-content width="4">
+          <md-menu-content>
             <md-menu-item>
               <md-input-container>
                 <label>What?</label>
@@ -19,26 +17,19 @@
             </md-menu-item>
           </md-menu-content>
         </md-menu>
-      </div>
-      <div flex="25">
-       <md-button>
+       <md-button flex="25">
          Where?
        </md-button>
-      </div>
-      <div flex="25">
-       <md-button>
+       <md-button flex="25">
          When?
        </md-button>
-      </div>
-      <div flex="25">
-       <md-button>
+       <md-button flex="25">
          Who?
        </md-button>
-      </div>
     </div>
   </md-toolbar>
   
-  <md-content flex>
+  <md-content flex class="md-padding" style="padding-bottom: 150px">
     <md-grid-list
         md-cols="2" md-cols-sm="3" md-cols-md="4" md-cols-gt-md="6"
         md-row-height-gt-md="1:1" md-row-height="1:1"
