--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -1,30 +1,13 @@
 <div ng-controller="MainController" ng-cloak>
   <md-content>
-    <md-tabs md-stretch-tabs="always" class="md-accent" md-selected="data.selectedIndex" md-align-tabs="top" md-no-pagination>
+    <md-tabs md-stretch-tabs="always" class="md-accent" md-selected="data.selectedIndex" md-align-tabs="top" md-dynamic-height md-no-pagination>
       <md-tab id="tab1">
         <md-tab-label>
           <md-icon class="material-icons">add</md-icon>
         </md-tab-label>
         <md-tab-body flex>
-          <div class="md-padding">
-          View for Item #1 is bullshit<br/>
-          data.selectedIndex = 0;
-          </div>
-          <md-toolbar flex layout="row" class="md-toolbar fixed-footer">
-            <md-button flex="25">
-              What
-            </md-button>
-             <md-button flex="25">
-              When
-            </md-button>
-            <md-button flex="25">
-              Where
-            </md-button>
-            <md-button flex="25">
-              Who
-            </md-button>
-          </md-toolbar>
-        </md-tab-body>
+        <div flex ng-include src="'assets/templates/event-list.html'" ng-controller="EventController"></div>
+       </md-tab-body>
       </md-tab>
       <md-tab id="tab2">
         <md-tab-label>
