try my hand at bottom tabs

--- a/client/assets/templates/event-list.html
+++ b/client/assets/templates/event-list.html
@@ -1,6 +1,6 @@
 <!-- <h1>{{title}}</h1>-->
  
-<div layout="column" style="height:100vh;">
+<div layout="column">
 
   <md-content flex >
     <md-grid-list
@@ -35,7 +35,7 @@
   </md-content> 
  
  
-  <md-toolbar style="margin-bottom:35px;">
+  <md-toolbar>
     <div class="md-toolbar-tools" layout="row">
 
        <div flex="25" ng-controller="FilterMenuCtrl as ctrl">
