--- a/client/assets/templates/event-list.html
+++ b/client/assets/templates/event-list.html
@@ -2,7 +2,7 @@
  
 <div layout="column">
  
-  <md-toolbar flex md-scroll-shrink ng-if="true" class="fixed-footer">
+  <md-toolbar flex md-scroll-shrink ng-if="true" class="fixed-footer" ng-controller="FilterMenuCtrl as ctrl">
     <div class="md-toolbar-tools" layout="row">
         <md-menu>
           <md-button flex="25" aria-label="what" ng-click="ctrl.openMenu($mdOpenMenu, $event)" >
@@ -11,21 +11,55 @@
           <md-menu-content>
             <md-menu-item>
               <md-input-container>
-                <label>What?</label>
-                <input ng-model="event.name">
+                <label>What do you want to do?</label>
+                <input ng-change="makeQuery()" ng-model="query.name">
               </md-input-container>
             </md-menu-item>
           </md-menu-content>
         </md-menu>
-       <md-button flex="25">
-         Where?
-       </md-button>
-       <md-button flex="25">
-         When?
-       </md-button>
-       <md-button flex="25">
+        <md-menu>
+        <md-button flex="25" aria-label="what" ng-click="ctrl.openMenu($mdOpenMenu, $event)" >
+            Where?
+          </md-button>
+          <md-menu-content>
+            <md-menu-item>
+              <md-input-container>
+                <label>What do you want to do?</label>
+                <input ng-change="makeQuery()" ng-model="query.location">
+              </md-input-container>
+            </md-menu-item>
+          </md-menu-content>
+        </md-menu>
+        <md-menu>
+        <md-button flex="25" aria-label="what" ng-click="ctrl.openMenu($mdOpenMenu, $event)" >
+            When?
+          </md-button>
+          <md-menu-content>
+            <md-menu-item>
+              <md-input-container>
+                <label>What do you want to do?</label>
+                <input ng-change="makeQuery()" ng-model="query.date">
+              </md-input-container>
+            </md-menu-item>
+          </md-menu-content>
+        </md-menu>
+        <md-button flex="25">
          Who?
        </md-button>
+
+        <!--<md-button flex="25" aria-label="what" ng-click="ctrl.openMenu($mdOpenMenu, $event)" >
+            Who?
+          </md-button>
+          <md-menu-content>
+            <md-menu-item>
+              <md-input-container>
+                <label>What do you want to do?</label>
+                <input ng-change="makeQuery()" ng-model="query.name">
+              </md-input-container>
+            </md-menu-item>
+          </md-menu-content>
+          </md-menu>-->
+
     </div>
   </md-toolbar>
   
