Read events from API

--- a/client/assets/templates/event-list.html
+++ b/client/assets/templates/event-list.html
@@ -5,7 +5,7 @@
         Name: <input ng-change="makeQuery()" ng-model="query.name">
       </p>
       <p>
-        Date/Time: <input ng-change="makeQuery()" ng-model="query.date">
+        Date/Time: <input ng-change="makeQuery()" ng-model="query.datetime">
       </p>
       <p>
         Location: <input ng-change="makeQuery()" ng-model="query.location">
@@ -18,7 +18,7 @@
         {{event.name}}
       </h2>
       <p>
-        {{event.date}}
+        {{event.datetime}}
       <br>
         {{event.location}}
       </p>
