--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -1,32 +1,50 @@
-<div ng-controller="MainController" ng-cloak>
+<div ng-controller="MainController" ng-cloak flex layout="column">
+  <div class="md-padding">
+      <md-toolbar ng-show="!showSearch" class="md-accent" layout="row">
+        <md-button aria-label="Search" ng-click="showSearch = !showSearch" flex="100">
+          Let's do something!
+        </md-button>
+      </md-toolbar>
+      <md-toolbar class="md-hue-1 md-accent" ng-show="showSearch">
+        <div class="md-toolbar-tools">
+          <md-button ng-click="showSearch = !showSearch" aria-label="Back">
+            <md-icon aria-label="arrow_back" class="material-icons">arrow_back</md-icon>
+          </md-button>
+          <h3 flex="10">
+            Back
+          </h3>
+          <md-input-container md-theme="input" flex>
+            <label>&nbsp;</label>
+            <input ng-model="search.who" placeholder="enter search">
+          </md-input-container>
+          <md-button aria-label="Search" ng-click="showSearch = !showSearch">
+            <ng-md-icon icon="search"></ng-md-icon>
+          </md-button>
+            <ng-md-icon icon="more_vert"></ng-md-icon>
+          </md-button>
+        </div>
+       
+      </md-toolbar>
+  </div>
+    <!--<div class="md-padding">
+      <md-toolbar md-scroll-shrink class="md-accent" layout="row">
+        <md-button class="md-accent" flex="100" ng-click="showModal($event);">Let's do something</md-button>
+      </md-toolbar>
+    </div>-->
+
   <md-content>
-    <md-tabs md-stretch-tabs="always" class="md-accent" md-selected="data.selectedIndex" md-align-tabs="top" md-dynamic-height md-no-pagination>
-      <md-tab id="tab1">
-        <md-tab-label>
-          <md-icon class="material-icons">add</md-icon>
-        </md-tab-label>
-        <md-tab-body flex>
-        <div flex ng-include src="'assets/templates/event-list.html'" ng-controller="EventController"></div>
-       </md-tab-body>
-      </md-tab>
-      <md-tab id="tab2">
-        <md-tab-label>
-          <md-icon class="material-icons">list</md-icon>
-</md-tab-label>
-        <md-tab-body >
-        <div flex ng-include src="'assets/templates/event-list.html'" ng-controller="EventController"></div>
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab3">
-        <md-tab-label><md-icon class="material-icons">perm_identity</md-icon>
-</md-tab-label>
-        <md-tab-body>
-          <div class="md-padding">
-          View for Item #1 <br/>
-          data.selectedIndex = 0;
-          </div>
-        </md-tab-body>
-      </md-tab>
-    </md-tabs>
+     <div flex ng-include src="'assets/templates/event-list.html'" ng-controller="EventController" style="padding-bottom: 100px;"></div>
+    <md-toolbar class="fixed-footer">
+      <div class="md-toolbar-tools" layout="row">
+          <md-button flex="33">
+           Convene
+         </md-button>
+         <md-button flex="33">
+           My Events
+         </md-button>
+         <md-button flex="33">
+           Settings
+         </md-button>
+      </div>
+    </md-toolbar>
   </md-content>
-</div>
