BULLSHIT COLOR PALETTE

--- a/client/assets/templates/event-list.html
+++ b/client/assets/templates/event-list.html
@@ -10,7 +10,7 @@
                       ng-class=""
                       class="event-tile">
 
-        <img src="{{event.image}}" alt="" class="bg-image">          
+        <img ng-src="{{event.img}}" alt="" class="bg-image">          
         <md-grid-tile-footer>
          <h3>{{event.name}}</h3>
          <h4>{{event.location}}</h4>
