--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -1,39 +1,54 @@
-<div ng-controller="MainController" ng-cloak flex layout="column">
+<div ng-controller="EventController" ng-cloak flex layout="column">
   <div class="md-padding">
-      <md-toolbar ng-show="!showSearch" class="md-accent" layout="row">
+      <md-toolbar ng-show="!showSearch" class="md-accent md-hue-3" layout="row">
         <md-button aria-label="Search" ng-click="showSearch = !showSearch" flex="100">
           Let's do something!
         </md-button>
       </md-toolbar>
-      <md-toolbar class="md-hue-1 md-accent" ng-show="showSearch">
+      <md-toolbar class="md-hue-3 md-accent" ng-show="showSearch">
         <div class="md-toolbar-tools">
           <md-button ng-click="showSearch = !showSearch" aria-label="Back">
-            <md-icon aria-label="arrow_back" class="material-icons">arrow_back</md-icon>
+            <md-icon class="material-icons">arrow_back</md-icon>
           </md-button>
-          <h3 flex="10">
-            Back
-          </h3>
-          <md-input-container md-theme="input" flex>
+        <md-input-container md-theme="input" flex>
             <label>&nbsp;</label>
-            <input ng-model="search.who" placeholder="enter search">
+            <input ng-model="searcher" placeholder="Enter Search">
           </md-input-container>
-          <md-button aria-label="Search" ng-click="showSearch = !showSearch">
-            <ng-md-icon icon="search"></ng-md-icon>
-          </md-button>
-            <ng-md-icon icon="more_vert"></ng-md-icon>
-          </md-button>
         </div>
-       
       </md-toolbar>
   </div>
-    <!--<div class="md-padding">
-      <md-toolbar md-scroll-shrink class="md-accent" layout="row">
-        <md-button class="md-accent" flex="100" ng-click="showModal($event);">Let's do something</md-button>
-      </md-toolbar>
-    </div>-->
 
-  <md-content>
-     <div flex ng-include src="'assets/templates/event-list.html'" ng-controller="EventController" style="padding-bottom: 100px;"></div>
+  <md-content style="padding-bottom: 100px;">
+    <md-section>
+      <md-grid-list
+        md-cols="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6"
+        md-row-height-gt-md="1:1" md-row-height="1:1"
+        md-gutter="5px" md-gutter-gt-sm="5px" >
+        
+      <md-grid-tile ng-repeat="event in filtered | filter:searcher"
+                      md-rowspan="1"
+                      md-colspan="1"
+                      ng-class=""
+                      class="event-tile">
+
+        <img ng-src="{{event.img}}" alt="" class="bg-image">
+        <md-grid-tile-footer>
+         <h3>{{event.name}}</h3>
+         <h4>{{event.location}}</h4>
+         <h4>{{event.datetime}}</h4>
+        </md-grid-tile-footer>
+      </md-grid-tile>
+
+    </md-grid-list>
+    
+    <!-- need to design Create Event button -->
+    <div ng-hide="filtered.length">
+      <h2>Nobody is doing that!</h2>
+      <md-button class="md-raised" ng-click="createEvent();">
+        Fuck it I'm doing it anyway!
+      </md-button>
+    </div>
+  </md-section>
     <md-toolbar class="fixed-footer">
       <div class="md-toolbar-tools" layout="row">
           <md-button flex="33">
@@ -48,3 +63,4 @@
       </div>
     </md-toolbar>
   </md-content>
+</div>
