make login not suck, and crop off edges of images

--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -23,9 +23,12 @@ md-grid-list {
   margin:5px;
 }
 md-grid-list md-grid-tile.event-tile {
+  overflow: hidden;
 }
 md-grid-list md-grid-tile.event-tile .bg-image {
-  width: 100%;
+  width: 120%;
+  left:-10%;
+  top:-10%;
 }
 md-grid-list md-grid-tile.event-tile md-grid-tile-footer, md-grid-list md-grid-tile.event-tile md-grid-tile-header {
   height: initial;
@@ -33,5 +36,8 @@ md-grid-list md-grid-tile.event-tile md-grid-tile-footer, md-grid-list md-grid-t
   padding: 5px;
 }
 md-grid-list md-grid-tile md-grid-tile-footer h3, md-grid-list md-grid-tile md-grid-tile-footer h4, md-grid-list md-grid-tile md-grid-tile-header h3, md-grid-list md-grid-tile md-grid-tile-header h4 {
+  margin:0;
+}
+#login-form md-input-container {
   margin:0;
 }
