--- a/client/assets/templates/event-detail.html
+++ b/client/assets/templates/event-detail.html
@@ -1,11 +1,11 @@
 <header md-page-header style="height: 50vh;">
-  <div md-header-picture style=" background-image:url(assets/images/backgroundtest.jpg)"></div>
+  <div md-header-picture style="background-image:url({{event.img}})"></div>
   <md-toolbar scroll>
     <div class="md-toolbar-tools">
-      <md-button class="md-tools" aria-label="Go Back">
+      <md-button class="md-tools" aria-label="Go Back" ng-click="goHome()">
         <md-icon aria-label="keyboard_arrow_left" class="material-icons">keyboard_arrow_left</md-icon>
       </md-button>
-      <h2 md-header-title flex>Hiking</h2>
+      <h2 md-header-title flex>{{event.name}}</h2>
       <md-button class="md-tools" aria-label="Edit Contact">
         <md-icon aria-label="assistant Photo" class="material-icons">&#xE3A0;</md-icon>
       </md-button>
@@ -21,8 +21,8 @@
     <md-subheader class="md-primary">Participants</md-subheader>
       <md-list layout-padding layout-wrap layout layout-align="center center">
         <md-list-item class="md-3-line" ng-repeat="user in users" layout="column">
-          <img ng-src="{{user.pic}}" class="md-avatar" alt="{{user.name}}">
-          <p align="center">{{ user.name }}</p>
+          <img ng-src="{{user.prefs.img}}" class="md-avatar" alt="{{user.username}}">
+          <p align="center">{{ user.username }}</p>
         </md-list-item>
       </md-list>
     </div>
@@ -31,17 +31,17 @@
     <md-subheader class="md-primary" sticky-state="next">Messages</md-subheader>
     <md-list layout-padding>
       <md-list-item class="md-3-line" ng-repeat="message in commentChain">
-        <img ng-if="message.who != curUser" ng-src="{{message.pic}}" class="md-avatar" alt="{{message.who}}">
+        <img ng-if="message.owner.username != curUser" ng-src="{{message.owner.prefs.img}}" class="md-avatar" alt="{{message.owner.username}}">
         <div class="md-list-item-text" style="padding: 10px;">
-          <h3 ng-if="message.who != curUser" style="padding-bottom: 5px;">{{ message.who }}</h3>
-          <p ng-if="message.who != curUser">
+          <h3 ng-if="message.owner.username != curUser" style="padding-bottom: 5px;">{{ message.owner.username }}</h3>
+          <p ng-if="message.owner.username != curUser">
             {{ message.text }}
           </p>
-          <p ng-if="message.who == curUser" align="right">
+          <p ng-if="message.owner.username == curUser" align="right">
             {{ message.text }}
           </p>
         </div>
-        <img ng-if="message.who == curUser" ng-src="{{message.pic}}" class="md-avatar" alt="{{message.who}}">
+        <img ng-if="message.owner.username == curUser" ng-src="{{message.owner.prefs.img}}" class="md-avatar" alt="{{message.owner.username}}">
         <md-divider ></md-divider>
       </md-list-item>
     </md-list>
@@ -51,7 +51,7 @@
       <md-input-container flex="grow">
         <input type="text" ng-model="message" placeholder="Say something!">
       </md-input-container>
-      <md-button class="md-icon-button" aria-label="Send">
+      <md-button class="md-icon-button" aria-label="Send" ng-click="postComment()">
         <md-icon class="material-icons">send</md-icon>
       </md-button>
       </div>
