--- a/client/assets/templates/event-list.html
+++ b/client/assets/templates/event-list.html
@@ -2,7 +2,7 @@
       <md-grid-list
         md-cols="2" md-cols-sm="3" md-cols-md="4" md-cols-gt-md="6"
         md-row-height-gt-md="1:1" md-row-height="1:1"
-        md-gutter="5px" md-gutter-gt-sm="5px" >
+        md-gutter="" md-gutter-gt-sm="" >
         
       <md-grid-tile ng-repeat="event in filtered"
                       md-rowspan="1"
