--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -28,10 +28,12 @@ md-grid-list {
 md-grid-list md-grid-tile.event-tile {
   overflow: hidden;
 }
-md-grid-list md-grid-tile.event-tile .bg-image {
+md-grid-list md-grid-tile.event-tile img.bg-image {
   width: 120%;
   left:-10%;
   top:-10%;
+  -webkit-filter: blur(5px);
+  filter: blur(5px);
 }
 md-grid-list md-grid-tile.event-tile md-grid-tile-footer, md-grid-list md-grid-tile.event-tile md-grid-tile-header {
   height: initial;
