Hooked up tiles to detail view

--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -30,13 +30,14 @@
                       md-colspan="1"
                       ng-class=""
                       class="event-tile">
-
+        <a ng-href="/#/events/{{event.id}}">
         <img ng-src="{{event.img}}" alt="" class="bg-image">
         <md-grid-tile-footer>
          <h3>{{event.name}}</h3>
          <h4>{{event.location}}</h4>
          <h4>{{event.datetime}}</h4>
         </md-grid-tile-footer>
+      </a>
       </md-grid-tile>
 
     </md-grid-list>
