Setup for the My Events view

--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -71,7 +71,7 @@
         <md-button flex="33">
          Convene
        </md-button>
-       <md-button flex="33">
+       <md-button ng-click="myEvents()" flex="33">
          My Events
        </md-button>
        <md-button flex="33">
