Fix border radius for mobile

--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -56,7 +56,7 @@ md-grid-list md-grid-tile md-grid-tile-footer h4, md-grid-list md-grid-tile md-g
 }
 
 .large-headshot {
-  border-radius: 50%;
+  border-radius: 9999px;
 }
 
 .pad-text {
