--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -35,7 +35,7 @@
         <md-grid-tile-footer>
          <h3>{{event.name}}</h3>
          <h4>{{event.location}}</h4>
-         <h4>{{event.datetime}}</h4>
+         <h4>{{event.datetime | date:"EEEE 'at' ha"}}</h4>
         </md-grid-tile-footer>
       </md-grid-tile>
 
