Ability to flag users and events

--- a/client/assets/templates/event-detail.html
+++ b/client/assets/templates/event-detail.html
@@ -14,11 +14,8 @@
       <md-button ng-show="joined" class="md-tools" aria-label="Leave" ng-click="leave()">
         LEAVE
       </md-button>
-      <md-button class="md-tools" aria-label="Edit Contact">
+      <md-button class="md-tools" ng-click="flagToast()" aria-label="Edit Contact">
         <md-icon aria-label="assistant Photo" class="material-icons">&#xE3A0;</md-icon>
-      </md-button>
-      <md-button class="md-tools" aria-label="More">
-        <md-icon aria-label="assistant Photo" class="material-icons">&#xE3E3;</md-icon>
       </md-button>
     </div>
   </md-toolbar>
