--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -74,3 +74,7 @@ header.page-header {
 .pad-text {
   padding-bottom:20px;
 }
+
+md-input-container.md-default-theme label, md-input-container label, md-input-container.md-default-theme .md-placeholder, md-input-container .md-placeholder {
+  color: rgba(255,255,255,.6);
+}
