--- a/client/assets/templates/event-detail.html
+++ b/client/assets/templates/event-detail.html
@@ -26,13 +26,14 @@
     <md-subheader class="md-primary">Participants</md-subheader>
     <md-list layout-padding layout-wrap layout layout-align="center center" class="avatar-list">
       <md-list-item class="md-3-line" ng-repeat="user in users" layout="column" ng-click="userDetail(user.id)">
-        <img ng-src="{{user.prefs.img}}" class="md-avatar" alt="{{user.username}}">
-        <p class="avatar-text">{{ user.username }}</p>
+        <md-icon ng-hide="user.username" style="font-size: 48px;" class="material-icons">account_circle</md-icon>
+        <img ng-show="user.username" ng-src="{{user.prefs.img}}" class="md-avatar" alt="{{user.username}}">
+        <p ng-show="user.username" class="avatar-text">{{ user.username }}</p>
       </md-list-item>
     </md-list>
     </div>
   </section>
-  <section>
+  <section ng-show="joined">
     <md-subheader class="md-primary" sticky-state="next">Messages</md-subheader>
     <md-list layout-padding>
       <md-list-item class="md-3-line" ng-repeat="message in commentChain">
@@ -51,7 +52,7 @@
       </md-list-item>
     </md-list>
   </section>
-  <section class="dark-background">
+  <section ng-show="joined" class="dark-background">
       <div  layout-align="center center" layout flex="70" flex-offset="15">
       <md-input-container flex="grow">
         <input type="text" ng-model="message" placeholder="Say something!">
