--- a/client/assets/templates/event-detail.html
+++ b/client/assets/templates/event-detail.html
@@ -4,7 +4,7 @@
   </div>
   <md-toolbar scroll>
     <div class="md-toolbar-tools">
-      <md-button class="md-tools" aria-label="Go Back" ng-click="goHome()">
+      <md-button class="md-tools" aria-label="Go Back" ng-click="goBack()">
         <md-icon aria-label="keyboard_arrow_left" class="material-icons">keyboard_arrow_left</md-icon>
       </md-button>
       <h2 md-header-title flex>{{event.name}}</h2>
