--- a/client/assets/templates/user-detail.html
+++ b/client/assets/templates/user-detail.html
@@ -1,7 +1,7 @@
 <header md-page-header>
   <md-toolbar>
     <div class="md-toolbar-tools">
-      <md-button class="md-tools" aria-label="Go Back" ng-click="goHome()">
+      <md-button class="md-tools" aria-label="Go Back" ng-click="goBack()">
         <md-icon aria-label="keyboard_arrow_left" class="material-icons">keyboard_arrow_left</md-icon>
       </md-button>
       <h2 md-header-title flex>{{ details.username }}</h2>
