--- a/client/assets/templates/event-detail.html
+++ b/client/assets/templates/event-detail.html
@@ -25,10 +25,12 @@
   <div class="dark-background" >
     <md-subheader class="md-primary">Participants</md-subheader>
     <md-list layout-padding layout-wrap layout layout-align="center center" class="avatar-list">
-      <md-list-item class="md-3-line" ng-repeat="user in users" layout="column" ng-click="userDetail(user.id)">
-        <md-icon ng-hide="user.username" style="font-size: 48px;" class="material-icons">account_circle</md-icon>
-        <img ng-show="user.username" ng-src="{{user.prefs.img}}" class="md-avatar" alt="{{user.username}}">
-        <p ng-show="user.username" class="avatar-text">{{ user.username }}</p>
+      <md-list-item ng-hide="user.username" class="md-3-line" ng-repeat="user in users" layout="column" ng-click="userDetail(user.id)">
+        <md-icon style="font-size: 46px; margin-top: 2px" class="material-icons">account_circle</md-icon>
+      </md-list-item>
+      <md-list-item ng-show="user.username" class="md-3-line" ng-repeat="user in users" layout="column" ng-click="userDetail(user.id)">
+        <img ng-src="{{user.prefs.img}}" class="md-avatar" alt="{{user.username}}">
+        <p class="avatar-text">{{ user.username }}</p>
       </md-list-item>
     </md-list>
     </div>
