--- a/client/assets/templates/event-detail.html
+++ b/client/assets/templates/event-detail.html
@@ -56,12 +56,14 @@
   </section>
   <section ng-show="joined" class="dark-background">
       <div  layout-align="center center" layout flex="70" flex-offset="15">
+      <form ng-submit="postComment()">
       <md-input-container flex="grow">
         <input type="text" ng-model="message" placeholder="Say something!">
       </md-input-container>
       <md-button class="md-icon-button" aria-label="Send" ng-click="postComment()">
         <md-icon class="material-icons">send</md-icon>
       </md-button>
+      </form>
       </div>
   </section>
 </md-content>
