--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -12,6 +12,19 @@ body {
     background-position:50% 50%;
 }
 
+.md-toolbar-tools-bottom {
+  font-size: small;
+  & :last-child {
+    opacity: 0.8;
+  }
+}
+
+md-toolbar {
+  .md-button.md-default-theme {
+    border-radius: 9999px; // round toolbar buttons
+  }
+}
+
 [scroll] {
   position:fixed;
   top:0;
@@ -77,4 +90,9 @@ header.page-header {
 
 md-input-container.md-default-theme label, md-input-container label, md-input-container.md-default-theme .md-placeholder, md-input-container .md-placeholder {
   color: rgba(255,255,255,.6);
+}
+
+md-input-container.md-default-theme .md-input, md-input-container .md-input {
+  text-shadow: none ;
+  color: #000;
 }
