--- a/client/assets/templates/event-list.html
+++ b/client/assets/templates/event-list.html
@@ -24,7 +24,7 @@
     <div ng-hide="filtered.length">
       <h2>Nobody is doing that!</h2>
       <md-button class="md-raised" ng-click="createEvent();">
-        Fuck it I'm doing it anyway!
+        Let us do it!
       </md-button>
     </div>
   </md-section>
