--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -42,7 +42,7 @@
   <md-section>
     <div ng-hide="filtered.length > 0 || waiting" class="md-padding" layout="column" layout-align="center center">
       <h2>Awesome, let's schedule this!</h2>
-      <h3>Don't worry, we'll take care of the invites</h3>
+      <h3>Don't worry, we'll take care of the invites.</h3>
       <md-input-container class="md-block">
         <input required type="text" ng-model="sub.name" placeholder="What are we doing?"/>
       </md-input-container>
@@ -59,7 +59,7 @@
         <input required type="text" ng-model="sub.location" placeholder="Where are we convening?"/>
       </md-input-container>
       <md-button class="md-raised md-primary" ng-click="createEvent();">
-        Fuck it I'm doing it anyway!
+        Make it happen!
       </md-button>
     </div>
   </md-section>
